# SmoothPursuit

./: .gitignore  CMakeLists.txt  README.md  dsp.kdev4  main.cpp
Examples/: ball.avi  dot_step_x.avi
include/: ImageMotionModel.hpp  OpticalFlowCPU.hpp  StupidSlip.hpp
include/CircularBuffer/: CircularBuffer.hpp  CircularStackBuffer.hpp  RingBuffer.hpp
include/Devices/: BaseDevice.hpp  DSPSystem.hpp  DelayDevice.hpp  DeviceInput.hpp  DeviceOutput.hpp  Generator.hpp  ImageMotionModel.hpp  ImageMotionModelDevice.hpp  InputSignalDevice.hpp  MultInputDevice.hpp  OutputSignalDevice.hpp  SaturationDevice.hpp  SimpleConnectionDevice.hpp  SingleInputDevice.hpp  SystemOutputDevice.hpp  VelocityInputDevice.hpp
include/Devices/Filters/: FIRDevice.hpp  FirstDifferentiatorDevice.hpp  LowPassExponencialDevice.hpp  LowPassFilterDevice.hpp  TrapzIntegratorDevice.hpp
include/Devices/Image/: ImageViewerDevice.hpp
include/Devices/Interpolation/: PointInterpolationDevice.hpp  VelocityInterpolationDevice.hpp
include/Devices/Math/: AddSignalDevice.hpp  AddSignalsDevice.hpp  DRandomInputDevice.hpp  ImpulseGainDevice.hpp  LinearGainDevice.hpp  SmoothGainDevice.hpp  SubtractVelocityDevice.hpp
include/Devices/Video/: FoveaDevice.hpp  InputVideoDevice.hpp  OpticalFlowCPUDevice.hpp  OpticalFlowGPUDevice.hpp  RetinaDevice.hpp  VideoSignalDevice.hpp
include/ListT/: ListT.hpp  NodeT.hpp
include/MatrixT/: MatrixT.hpp
src/: ImageMotionModel.cpp  OpticalFlowCPU.cpp  StupidSlip.cpp
